# gtk-editor

./: pyproject.toml
gtk_editor/: __main__.py
gtk_editor/src/: app.py  window.py
